--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "sweetalert2": "^11.4.13",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1"
   },
