--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.3",
     "sweetalert2": "^11.4.13",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
